kubewarden/M0002-metadata-annotations/policy-M0001.yaml
# Copyright (C) 2021 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: policies.kubewarden.io/v1alpha2
kind: ClusterAdmissionPolicy
metadata:
  name: portefaix-M0002
spec:
  module: registry://ghcr.io/kubewarden/policies/safe-annotations:v0.1.1
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
      operations:
      - CREATE
      - UPDATE
  mutating: false
  settings:
    denied_annotations: []
    # TODO: https://github.com/kubewarden/safe-annotations-policy/issues/1
    # mandatory_annotations:
    # - a8r.io/description
    # - a8r.io/owner
    # - a8r.io/bugs
    # - a8r.io/documentation
    # - a8r.io/repository
    # - a8r.io/support
    constrained_annotations: []
